# TestDashboard-FileRenaming

./: .coverage  .gitignore  AGENTS.md  Git-Ops.md  PROGRESS_TRACKER.md  PROJECT_BRIEF.md  error.txt  file_rename.py  pyproject.toml
Code/: Option_C-Max-API.py  dataset_actions_core.py  face_cropper_nitara.py  face_jobs.py  face_similarity_step1.py  face_similarity_step2.py  pyproject.toml
Code/Depr/backend/: dataset_actions.py  file_rename-PySide6.py
Code/Depr/frontend/: App-Sheet.jsx  App.css  BlobField.jsx  Particles.jsx  WaveScene.jsx
Code/Upcoming/: dataset_actions.py  replace_word_in_files_and_filenames.py  replace_word_inside_file-contents_and_filenames.py
Code/face-studio/: README.md  package-lock.json  package.json  uno.config.ts  vite.config.js
Code/face-studio/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
Code/face-studio/src/: app.css
Code/fileops.egg-info/: SOURCES.txt
Code/neura-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Code/neura-ui/coverage/: index.html
Code/neura-ui/src/: App.jsx  index.css  main.jsx  setupTests.js
Code/neura-ui/tests/: README.md  run-frontend-lint.sh
Documentation/: DB3-brief.md  Git-Ops.md  HUMAN_GUIDE.md  PROGRESS_TRACKER.md  PROJECT_BRIEF.md  README.md  TECH_STACK_OVERVIEW.md  code-errors.md  error.md
Samples/Captions/Active/: amara_full_body_0003.txt  amara_full_body_0004.txt  (+83 more)
fileops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
neura-ui/: package-lock.json  tailwind.config.js
neura-ui/src/: App-Sheet.jsx  App.jsx  index.css
(+609 files in other folders)
