[project]
name = "fileops"
version = "0.1.0"
description = "Simple utility scripts for file operations (case-preserving replace, etc.)"
requires-python = ">=3.9"
dependencies = [
  "python-docx>=1.1.0",
  "openpyxl>=3.1.0",
  "PySide6",
  "fastapi",
  "uvicorn",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicitly tell setuptools which root-level modules belong to this project
py-modules = [
  "file_rename",
  "replace_word_in_files_and_filenames",
  "Option_C-Max-API",
]