[project]
name = "neura-smart-renamer"
version = "0.1.0"
description = "Local-first FastAPI + React dashboard for batch file/dataset renaming"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
tests = [
  "pytest>=9.0.0",
  "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["Code/neura-ui/tests/backend"]
addopts = "--strict-markers -ra"
